<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="registerViewModel"
            type="com.apollyon.samproject.auth.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.RegisterFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/join_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_reg"
            android:hint="@string/email_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:text="@{registerViewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_reg"
            android:hint="@string/hint_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{registerViewModel.username}"
            app:layout_constraintEnd_toEndOf="@+id/email_edit_reg"
            app:layout_constraintStart_toStartOf="@+id/email_edit_reg"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_reg" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/age_edit"
            android:hint="@string/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{registerViewModel.age.toString()}"
            app:layout_constraintEnd_toEndOf="@+id/username_reg"
            app:layout_constraintStart_toStartOf="@+id/username_reg"
            app:layout_constraintTop_toBottomOf="@+id/username_reg" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_reg"
            android:hint="@string/hint_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="textPassword"
            android:text="@{registerViewModel.password}"
            app:layout_constraintEnd_toEndOf="@+id/age_edit"
            app:layout_constraintStart_toStartOf="@+id/age_edit"
            app:layout_constraintTop_toBottomOf="@+id/age_edit" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_reg2"
            android:hint="@string/retype_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="textPassword"
            android:text="@{registerViewModel.retypedPassword}"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_reg"
            app:layout_constraintStart_toStartOf="@+id/password_edit_reg"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_reg" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/register_but_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>